<resources>
    <string name="app_name">Flipsen</string>
    <string name="title_vault">Tresor</string>
    <string name="title_generator">Generator</string>
    <string name="title_settings">Einstellungen</string>
    <string name="profile">Profil</string>
    <string name="username">Benutzername</string>

    <!--login-->
    <string name="welcome">Willkommen</string>
    <string name="accountname">Email</string>
    <string name="password">Passwort</string>
    <string name="login">Login</string>
    <string name="forgotten_password">Passwort vergessen?</string>
    <string name="link_forgotten_password">Hier klicken.</string>
    <string name="login_btn">Login</string>

    <!--register-->
    <string name="register">Registrieren</string>
    <string name="register_accountname">Email</string>
    <string name="register_password">Passwort</string>

    <!-- settings general -->
    <string name="profile_show">Profil</string>
    <string name="change_email">Email ändern</string>
    <string name="change_password">Passwort ändern</string>
    <string name="change_user">Benutzer wechseln</string>
    <string name="delete_account">Account löschen</string>
    <string name="logout">Logout</string>
    <!-- settings mail -->
    <string name="current_email">Aktuelle Email</string>
    <string name="new_email">Neue Email</string>
    <string name="new_email_confirm">Neue Email Bestätigen</string>
    <string name="btn_confirm">Bestätigen</string>
    <!-- settings password -->
    <string name="current_password">Aktuelles Passwort</string>
    <string name="new_password">Neues Passwort</string>
    <string name="new_password_confirm">Neues Passwort bestätigen</string>

    <!-- password entry -->
    <string name="image_button_description">Editieren des Passworteintrags</string>
    <string name="favicon_description">Favicon der eingestellten Website</string>
    <!-- vault fragment -->
    <string name="folder">Ordner</string>
    <string name="unsorted">Unsortiert</string>
    <string name="vault_action_button">Neuen Passworteintrag erstellen</string>
    <string name="save">Speichern</string>
    <string name="back_btn_description">Zurück zur Profilseite</string>
    <string name="entry_information">Eintrags-Informationen</string>
    <string name="name">Name</string>
    <string name="notes">Notizen</string>
    <string name="other">Sonstiges</string>
    <string name="url">URL</string>

    <string name="action_delete">Löschen</string>
    <string name="action_move">Verschieben</string>

</resources>