<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_800"
    android:orientation="vertical"
    tools:context=".view.ui.settings.SettingsFragment">

     <EditText
         android:id="@+id/settingsNewEmail"
         android:background="@drawable/round_rectangle_for_bars"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:padding="15dp"
         android:ems="10"
         android:hint="@string/new_email"
         android:inputType="textEmailAddress"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"/>

     <EditText
         android:id="@+id/settingsNewEmailConfirmation"
         android:background="@drawable/round_rectangle_for_bars"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:padding="15dp"
         android:ems="10"
         android:hint="@string/new_email_confirm"
         android:inputType="textEmailAddress"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"/>

     <Button
         android:id="@+id/btnSettingsNewEmailConfirmation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:padding="15dp"
         android:text="@string/btn_confirm"
         android:textColor="#FFFFFF"/>
 </LinearLayout>