<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_800"
    android:orientation="vertical"
    tools:context=".view.ui.settings.SettingsFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/settingsNewPassword"
        android:background="@drawable/round_rectangle_for_bars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/settingsNewPasswordConfirmation"
        android:background="@drawable/round_rectangle_for_bars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/new_password_confirm"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnSettingsNewPasswordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="@string/btn_confirm"
        android:textColor="#FFFFFF"/>
</LinearLayout>